# rlless

./: .gitignore  AGENTS.md  ASYNC_EVENT_HANDLING_PLAN.md  CLAUDE.md  Cargo.toml  PRD_rlless_2025-08-31.md  README.md  generate_test_file.py
benches/: file_access.rs  memory_usage.rs  search_performance.rs
design/: DESIGN.md  SEQUENTIAL_VS_PARALLEL_DESIGN.md  SIMD_LINE_PROCESSING.md  file-accessor-implementation.md  input_render_refactor_plan.md  phase1-foundation.md  phase2-core-components.md  phase3-user-interface.md  phase4-quality-assurance.md  search_enhancements_stage4.md  search_enhancements_stage4_benchmarks.md  search_enhancements_stage5.md  task5-compression-design.md  threaded_input_search_render_plan.md
src/: app.rs  error.rs  file_handler.rs  input.rs  lib.rs  main.rs  render.rs  search.rs  ui.rs
src/app/: messages.rs  runtime.rs
src/file_handler/: accessor.rs  adaptive.rs  compression.rs  factory.rs  in_memory.rs  line_index.rs  mmap.rs  validation.rs
src/input/: raw.rs  service.rs  state.rs
src/render/: protocol.rs  service.rs  ui.rs
src/render/ui/: renderer.rs  state.rs  terminal.rs  theme.rs
src/search/: core.rs  worker.rs
src/ui/: commands.rs  events.rs  input_state.rs  renderer.rs  state.rs  terminal.rs
tests/: search_worker.rs
